--- a/index.html
+++ b/index.html
@@ -7,14 +7,37 @@
    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
+  
+    <span id="background-img">
+    <img src="./assets/netflix-logo.png" alt="netflix-logo" id="logo">
+    </span>
 
-
-
-
- p
-
-
-
-
+    <div id="overlay"></div>
+    <div id="form-container">
+        <form action="" >
+            <p id="title">Entrar</p>
+        <div >
+            <i>E-mail</i>
+            <input type="email" name="E-mail">8
+        </div>
+        <div>
+            <input type="password" name="Senha" id="">
+        </div>
+        </form>
+    </div>
+    <div class="site-footer-wrapper">
+      <div>
+        <p>Dúvidas? Ligue 85991380651</p>
+        <ul>
+            <li>
+              <a href="https://help.netflix.com/support/412">
+                <span>
+                  Perguntas frequentes
+                </span>
+              </a>
+            </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
