bug fix background img

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   </head>
   <body>
   
-    <span id="background-img">
+    <img src="./assets/background.jpg"  alt="netflix-logo"  id="background-img" >
     <img src="./assets/netflix-logo.png" alt="netflix-logo" id="logo">
-    </span>
+
 
     <div id="overlay"></div>
     <div id="form-container">
         <form action="" >
             <p id="title">Entrar</p>
         <div >
-            <i>E-mail</i>
+          <label for="email">Email:</label>
             <input type="email" name="E-mail">8
         </div>
         <div>
