--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <img src="./assets/background.jpg" alt="background" id="background-img" />
     <img src="./assets/netflix-logo.png" alt="netflix-logo" id="logo" />
     <div id="overlay"></div>
 
