--- a/index.html
+++ b/index.html
@@ -47,14 +47,53 @@
     </div>
     <div class="footer-container">
       <div class="footer">
-        <p>Dúvidas? Ligue 85991380651</p>
-        <ul>
-          <li>
-            <a href="https://help.netflix.com/support/412">
-              <span> Perguntas frequentes </span>
+        <p class="title-footer">
+          Dúvidas? Ligue <span><a href="" class="number">85991380651</a></span>
+        </p>
+        <div class="a-container">
+          <div class="a-column">
+            <a href="https://help.netflix.com/support/412" class="a-footer">
+              <span> Perguntas frequentes</span>
             </a>
-          </li>
-        </ul>
+
+            <a href="https://help.netflix.com/support/412" class="a-footer">
+              <span> Preferências de cookies</span>
+            </a>
+          </div>
+
+          <div class="a-column">
+            <a href="https://help.netflix.com/support/412" class="a-footer">
+              <span> Central de Ajuda</span>
+            </a>
+
+            <a href="https://help.netflix.com/support/412" class="a-footer">
+              <span> Informações corporativas</span>
+            </a>
+          </div>
+          <div class="a-column">
+            <a href="https://help.netflix.com/support/412" class="a-footer">
+              <span> Termos de Uso</span>
+            </a>
+          </div>
+          <div class="a-column">
+            <a href="https://help.netflix.com/support/412" class="a-footer">
+              <span> Privacidade</span>
+            </a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <img
+            src="./assets/icon-global.png"
+            alt="global"
+            class="icon-global"
+          />
+          <button class="dropdown-button">Português</button>
+          <img
+          src="./assets/icon-arrow-bottom.png"
+          alt="global"
+          class="icon-arrow-bottom"
+        />
+        </div>
       </div>
     </div>
   </body>
